# Evolution-DecSync

./: .gitignore  .gitmodules  README.md  config.h.in  create-deb.sh  debian-control  evolution-decsync-add-collections.sh  meson.build
.github/workflows/: publish.yml
src/: meson.build
src/backends/: meson.build
src/backends/addressbook/: e-book-backend-decsync-factory.c  e-book-backend-decsync.c  e-book-backend-decsync.h  meson.build
src/backends/calendar/: e-cal-backend-decsync-events.c  e-cal-backend-decsync-events.h  e-cal-backend-decsync-factory.c  e-cal-backend-decsync-journal.c  e-cal-backend-decsync-journal.h  e-cal-backend-decsync-todos.c  e-cal-backend-decsync-todos.h  e-cal-backend-decsync.c  e-cal-backend-decsync.h  meson.build
src/backends/utils/: backend-decsync-utils.vala  meson.build
src/e-source/: decsync.source  e-source-decsync.c  e-source-decsync.h  meson.build
src/modules/: meson.build
src/modules/book-config/: meson.build  module-book-config-decsync.c
src/modules/cal-config/: meson.build  module-cal-config-decsync.c
src/modules/utils/: decsync-utils.vala  decsync.c  decsync.h  meson.build
